Fix alarm name conflict

--- a/stacks/container-apps/cms.prx.org.yml
+++ b/stacks/container-apps/cms.prx.org.yml
@@ -415,7 +415,7 @@ Resources:
     Type: AWS::CloudWatch::Alarm
     Properties:
       ActionsEnabled: true
-      AlarmName: !Sub "[CMS][Worker][SQS] ${EnvironmentType} Image Callbacks Not Processing"
+      AlarmName: !Sub "[CMS][Worker][SQS] - ${EnvironmentType} Image Callbacks Not Processing"
       AlarmActions:
         - !Ref OpsFatalMessagesSnsTopicArn
       InsufficientDataActions:
