Remove unused !Subs

--- a/stacks/container-apps/cms.prx.org.yml
+++ b/stacks/container-apps/cms.prx.org.yml
@@ -309,7 +309,7 @@ Resources:
               awslogs-region: !Ref AWS::Region
           Memory: !Ref ContainerMemory
           MemoryReservation: !If [HasMemoryReservation, !Ref ContainerMemoryReservation, !Ref "AWS::NoValue"]
-          Name: !Sub cms-worker
+          Name: cms-worker
           Command:
             - worker
       Tags:
@@ -441,7 +441,7 @@ Outputs:
     Value: !Ref WorkerTaskDefinition
   WorkerTaskDefinitionName:
     Description: Name of the worker task definition
-    Value: !Sub cms-worker
+    Value: cms-worker
   WorkerServiceName:
     Description: Name of the worker service
     Value: !GetAtt WorkerService.Name
@@ -450,5 +450,4 @@ Outputs:
     Value: !Ref WorkerLogGroup
   HostedZoneDNSName:
     Description: Convenience domain name for the ALB in a hosted zone
-    Value: !Sub |
-      cms.${EnvironmentTypeAbbreviation}-${VPC}.prx.tech.
+    Value: !Sub cms.${EnvironmentTypeAbbreviation}-${VPC}.prx.tech.
